<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFCFE"
    tools:context=".Terms">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/HeaderLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <FrameLayout
            android:id="@+id/Back_Button_Wrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:contentDescription="back_button_content_description"
                android:src="@drawable/ic_arrow_back"
                app:tint="#00537A"
                android:stateListAnimator="@animator/button_press_animator"/>
        </FrameLayout>

        <TextView
            android:id="@+id/TallyTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Terms and Condition"
            android:textSize="24sp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:textColor="#313131"
            android:gravity="center_horizontal"
            android:maxLines="2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/Back_Button_Wrapper"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.core.widget.NestedScrollView
        android:id="@+id/WhiteContainerScroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/rounded_white_bg"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/HeaderLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fillViewport="true"
        android:backgroundTint="#FAFCFE">

        <LinearLayout
            android:id="@+id/registerContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="20dp">

                <!-- Title -->
                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="UMelec Legal Agreement: Terms of Service "
                    android:textSize="20sp"
                    android:textColor="#313131"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:layout_marginBottom="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Effective Date: November 25, 2025"
                    android:textSize="12sp"
                    android:textColor="#313131"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_marginTop="4dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/legal_agreement_p1"
                    android:textSize="12sp"
                    android:textColor="#313131"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/legal_agreement_p2"
                    android:textSize="12sp"
                    android:textColor="#313131"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/legal_agreement_p3"
                    android:textSize="12sp"
                    android:textColor="#313131"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="10dp"/>


                <!-- 1. Acceptance -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1. Definitions and Scope"
                    android:textSize="16sp"
                    android:textColor="#313131"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/definition_service"
                    android:textSize="12sp"
                    android:textColor="#313131"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/definition_applicable_laws"
                    android:textSize="12sp"
                    android:textColor="#313131"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/definition_electronic_signatures"
                    android:textSize="12sp"
                    android:textColor="#313131"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="10dp"/>

                <!-- 2. User Accounts -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2. Access and Eligibility"
                    android:textSize="16sp"
                    android:textColor="#313131"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2.1. Eligibility and Access: The Service is intended solely for official students, verified leaders, and authorized advisers of the University of Makati.
                        \n\n2.2. Account Creation: Use requires verification via UMak Gmail and Student ID.
                        \n\n2.3. Client Responsibility: You are solely responsible for maintaining the confidentiality of your credentials and Digital Signature. You bear the risk of losses resulting from wrongful use of your Electronic Signatures, provided there is no fault or gross negligence on the part of the Company."
                    android:textSize="12sp"
                    android:textColor="#313131"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_marginTop="4dp"/>

                <!-- 3. Voting -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3. Intellectual Property (IP) and User Content"
                    android:textSize="16sp"
                    android:textColor="#313131"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3.1. Company Ownership: The Company (Project Team) and the University of Makati own all content and materials within the Service, including the code, graphics, and trademarks, governed by the Intellectual Property Code of the Philippines (RA 8293).
\n\n3.2. User License: You are granted a limited, non-exclusive, non-transferable license to use the Service solely for participating in or managing COSEL elections.
\n\n3.3. User Content: By submitting content (e.g., candidate platforms, announcements), you grant the Company/COSEL a license to use that content for operating and documenting the elections. Prohibited content includes anything illegal, defamatory, or abusive."
                    android:textSize="12sp"
                    android:textColor="#313131"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_marginTop="4dp"/>

                <!-- 4. Acceptable Use -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4. Electronic Signatures and Validity"
                    android:textSize="16sp"
                    android:textColor="#313131"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4.1. Binding Effect: The Client irrevocably accepts to be bound by the act of voting and ballot validation upon submission of the required Digital Signature and confirmation.
\n\n4.2. Legal Recognition: You agree to use the Electronic Signatures as your valid and binding electronic signature under the E-Commerce Act of 2000 (RA 8792). The system records validating a correct Electronic Signature are conclusive evidence of the transaction.
\n\n4.3. Prohibition to Contest: You shall not contest the validity or enforceability of any transactions (including the casting of a vote) on the ground that they were electronically signed."
                    android:textSize="12sp"
                    android:textColor="#313131"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_marginTop="4dp"/>

                <!-- 5. Intellectual Property -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5. Disclaimers, Liability, and Indemnification"
                    android:textSize="16sp"
                    android:textColor="#313131"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5.1. No Warranty: The Service is provided “as is”. The Company makes no warranties regarding its quality or reliability.
\n\n5.2. Limitation of Liability: The Company restricts the types and amounts of damages that a user can claim. This restriction is subject to the Philippine Law Exception that a waiver or limitation of liability for fraud and gross negligence is void.
\n\n5.3. Indemnification: You agree to hold the Company and the University of Makati harmless against any claims, damages, or losses that arise from your actions or violation of these T&amp;Cs.
electronically signed."
                    android:textSize="12sp"
                    android:textColor="#313131"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_marginTop="4dp"/>

                <!-- 6. Termination -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="6. Dispute Resolution and Governing Law"
                    android:textSize="16sp"
                    android:textColor="#313131"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="6.1. Governing Law: These T&amp;Cs are governed by the laws of the Republic of the Philippines.
\n\n6.2. Exclusive Venue (Litigation): Any dispute shall be brought exclusively in the courts of the Philippines which have jurisdiction over the University of Makati's principal place of business."
                    android:textSize="12sp"
                    android:textColor="#313131"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_marginTop="4dp"/>

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>